@@ -46,7 +46,14 @@ AT_CHECK([if m4_default([$3], [false]); then
  true; fi], [0], [ignore], [ignore])
 
 AT_XFAIL_IF([m4_default([$4], [false])])
+
 cp $abs_srcdir/$1.stdout expout
+
+# Update version in expout to avoid regenerating stdout files at each commit
+sed -i \
+    -e "s/^# Generated by RobOptim core library .*$/# Generated by RobOptim core library $VERSION/"	\
+    expout
+
 TESTCASE=`which $1`
 echo "$at_srcdir/AT_LINE: $CHECK_PREFIX $TESTCASE"
 AT_CHECK([$CHECK_PREFIX $TESTCASE], [0], [expout], [ignore])
