@@ -1,3 +1,8 @@
+2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update version in stdout file automatically.
+	* autotest.at: Here.
+
 2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix Doxygen HTML rendering.
